--- a/.xbindkeysrc
+++ b/.xbindkeysrc
@@ -1,4 +1,4 @@
-116;9u# For the benefit of emacs users: -*- shell-script -*-
+# For the benefit of emacs users: -*- shell-script -*-
 ###########################
 # xbindkeys configuration #
 ###########################
@@ -88,7 +88,7 @@
 #   Shift + b:9
 
 # OCR - Image to text from selected area
-" /home/joona/.local/bin/poetry -C /home/joona/ run python3 /home/joona/python/scripts/img2txt.py"
+"uv run /home/joona/python/scripts/img2txt.py"
   m:0x10 + c:127
 
 # <-- ALT_R, CTRL_R, SHIFT_R META_R/WIN_R --> #cd
