Minor cfg changes ------------------
- Change VSCode font: `Fira Code` -> `Cascadia Code`
- Modify xbindkeys `openrgb` keybinds: `Left Super` -> `Right Super`
- Simplfied rsync helper functions

--- a/.shellrc
+++ b/.shellrc
@@ -70,7 +70,7 @@ export OLLAMA_HOST=10.0.0.21:11434
 # Python
 # ------
 export USE_EMOJI=false # pipx
-UV_CACHE_DIR=$HOME/.cache/uv
+export UV_CACHE_DIR=$HOME/.cache/uv
 # --------------------------------------------------------------- #
 
 # Source dedicated alias file
