Testing how system functions without `QT_PLUGIN_PATH` explicit definition

--- a/.shellrc
+++ b/.shellrc
@@ -13,6 +13,7 @@ $HOME/python/Projects/fsutils/:$HOME/python/Projects/fsutils/fsutils:\
 $HOME/python/libs/hwutils/hwutils/:$HOME/python/Projects/hwutils:\
 $HOME/python/Projects/hwutils/hwutils:$HOME/python/scripts/hass:\
 $HOME/python/scripts/bashhelpers/pacman:$HOME/python/Projects/fsutils/scripts:\
+$HOME/python/Projects/Momentis/src
 
 export PATH=$HOME/.dotfiles/:$HOME/scripts/:$HOME/scripts/graphing/:\
 $HOME/scripts/git_scripts/:$HOME/.local/bin:$HOME/scripts/shutdown:\
@@ -20,7 +21,6 @@ $HOME/scripts/startup:$HOME/scripts/logging/:$HOME/Code/Workspace:\
 $HOME/Android/Sdk/build-tools/35.0.0:$HOME/Android/Sdk/platform-tools:\
 $HOME/python/scripts/files/:/home/joona/.local/bin/:$PATH:$PYTHONPATH
 
-# export PYTHONPATH=${PYTHONPATH}:$HOME/.local/share/pipx/venvs/poetry/lib/python3.12/site-packages
 # Git
 # ---
 export GIT_COMMITTER_NAME="J Mujunen"
@@ -40,8 +40,8 @@ export __GLX_VENDOR_LIBRARY_NAME=nvidia
 export MOZ_ENABLE_WAYLAND=1
 export QSG_RENDERER_LOOP=basics
 # export QT_ENABLE_HIGHDPI_SCALING=1
+# export QT_PLUGIN_PATH=/usr/lib/qt/plugins:/usr/lib/qt6/plugins
 export QT_QPA_PLATFORM=wayland
-export GLFW_IM_MODULE=ibus
 
 # NVIDIA
 export SDL_VIDEO_FULLSCREEN_HEAD=1
@@ -56,7 +56,7 @@ export VDPAU_DRIVER=nvidia
 # Random
 # -----
 export MAKEFLAGS="-j$(nproc)"
-export QT_PLUGIN_PATH=/usr/lib/qt/plugins
+# export QT_PLUGIN_PATH=/usr/lib/qt6/plugins
 export TESSDATA_PREFIX=/usr/share/tessdata
 export DIFFPROG="kitty +kitten diff"
 export MOZ_DISABLE_RDD_SANDBOX=1
@@ -71,6 +71,7 @@ export OLLAMA_HOST=10.0.0.21:11434
 # ------
 export USE_EMOJI=false # pipx
 export UV_CACHE_DIR=$HOME/.cache/uv
+export MYPY_CACHE_DIR=$HOME/.cache/.mypy_cache
 # --------------------------------------------------------------- #
 
 # Source dedicated alias file
