--- a/.shellrc
+++ b/.shellrc
@@ -9,12 +9,13 @@ export CALCHISTFILE=$HOME/.cache/.calc_history
 export PYTHONPATH=$HOME/.ipython/profile_main/:$HOME/python/modules/:\
 $HOME/python/scripts/:$HOME/python/:$HOME/python/scripts/bashhelpers/:\
 $HOME/python/scripts/bashhelpers/ColorizeOutput/:$HOME/python/Projects/termllama/termllama/:\
-$HOME/python/Projects/fsutils/:$HOME/python/Projects/fsutils/fsutils:\
+$HOME/python/Projects/fsutils/:$HOME/python/Projects/Momentis/momentis:\
 $HOME/python/libs/hwutils/hwutils/:$HOME/python/Projects/hwutils:\
 $HOME/python/Projects/hwutils/hwutils:$HOME/python/scripts/hass:\
 $HOME/python/scripts/bashhelpers/pacman:$HOME/python/Projects/fsutils/scripts:\
 $HOME/python/Projects/Momentis:$HOME/python/Projects/Momentis/momentis:\
-$HOME/python/cython:$HOME/python/libs/
+$HOME/python/cython:$HOME/python/Projects/cython_fsutils:$HOME/python/libs/:\
+$HOME/python/Projects/python-modules/progress-bar
 
 export PATH=$HOME/.dotfiles/:$HOME/scripts/:$HOME/scripts/graphing/:\
 $HOME/scripts/git_scripts/:$HOME/.local/bin:$HOME/scripts/shutdown:\
