--- a/.shellrc
+++ b/.shellrc
@@ -3,25 +3,26 @@
 export EDITOR=micro
 export MICRO_TRUECOLOR=1
 export CALCHISTFILE=$HOME/.cache/.calc_history
-
+export ELECTRON_OZONE_PLATFORM_HINT=wayland
 
 # export PYTHONPYCACHEPREFIX=$HOME/.cache/__pycache__
 export PYTHONPATH=$HOME/.ipython/profile_main/:$HOME/python/modules/:\
 $HOME/python/scripts/:$HOME/python/:$HOME/python/scripts/bashhelpers/:\
 $HOME/python/scripts/bashhelpers/ColorizeOutput/:$HOME/python/Projects/termllama/termllama/:\
-$HOME/python/Projects/fsutils/:$HOME/python/Projects/Momentis/momentis:\
+$HOME/python/Projects/fsutils/:$HOME/python/Projects/Momentis/:\
 $HOME/python/libs/hwutils/hwutils/:$HOME/python/Projects/hwutils:\
 $HOME/python/Projects/hwutils/hwutils:$HOME/python/scripts/hass:\
 $HOME/python/scripts/bashhelpers/pacman:$HOME/python/Projects/fsutils/scripts:\
-$HOME/python/Projects/Momentis:$HOME/python/Projects/Momentis/momentis:\
 $HOME/python/cython:$HOME/python/Projects/cython_fsutils:$HOME/python/libs/:\
-$HOME/python/Projects/python-modules/progress-bar
+$HOME/python/Projects/python-modules/progress-bar:\
+$HOME/.local/bin/hyperfine/scripts:$HOME/python/scripts/files
 
 export PATH=$HOME/.dotfiles/:$HOME/scripts/:$HOME/scripts/graphing/:\
 $HOME/scripts/git_scripts/:$HOME/.local/bin:$HOME/scripts/shutdown:\
 $HOME/scripts/startup:$HOME/scripts/logging/:$HOME/Code/Workspace:\
 $HOME/Android/Sdk/build-tools/35.0.0:$HOME/Android/Sdk/platform-tools:\
-$HOME/python/scripts/files/:/home/joona/.local/bin/:$PATH:$PYTHONPATH
+$HOME/python/scripts/files/:/home/joona/.local/bin/:\
+$HOME/.local/bin/hyperfine/scripts:$PATH:$PYTHONPATH
 
 # Git
 # ---
@@ -57,6 +58,7 @@ export VDPAU_DRIVER=nvidia
 
 # Random
 # -----
+export TIMEFMT=$'\n================\nCPU\t%P\ntotal\t%*E'
 export MAKEFLAGS="-j$(nproc)"
 export TESSDATA_PREFIX=/usr/share/tessdata
 export DIFFPROG="kitty +kitten diff"
