--- a/.xbindkeysrc
+++ b/.xbindkeysrc
@@ -65,23 +65,15 @@
 #   Shift + b:9
 
 # OCR - Image to text from selected area
-# "/home/joona/python/scripts/ocr.py"
-#   m:0x10 + c:127
+"/home/joona/python/scripts/ocr.py"
+  Pause
+  # m:0x10 + c:127
 
-# <-- ALT_R, CTRL_R, SHIFT_R META_R/WIN_R --> #cd
+# - <---- ALT_R, CTRL_R, SHIFT_R META_R/WIN_R -->
 "openrgb -p sunset"
-  m:0x1d + c:39
   Control+Shift+Alt+Mod2 + s
-
-  # m:0x18 + c:39
-  # Alt+Mod2 + s
+  # m:0x1d + c:39
 
 "openrgb -p off"
-  m:0x1d + c:32
   Control+Shift+Alt+Mod2 + o
-  # m:0x18 + c:32
-  # Alt+Mod2 + o
 
-##################################
-# End of xbindkeys configuration #
-##################################
