.shellrc -> .env & update funcs/aliases to updated python (3.12.7 > 3.13.1)

--- a/.env
+++ b/.env
@@ -4,8 +4,10 @@ export EDITOR=micro
 export MICRO_TRUECOLOR=1
 export CALCHISTFILE=$HOME/.cache/.calc_history
 export ELECTRON_OZONE_PLATFORM_HINT=wayland
+export LESS='-RFs --exit-follow-on-close --use-color -Dd+m -Du+4 -DM9 -DP13 -Ds+y -Dk+226232'
 
-# export PYTHONPYCACHEPREFIX=$HOME/.cache/__pycache__
+export PYTHONPYCACHEPREFIX=$HOME/.cache/__pycache__
+
 export PYTHONPATH=$HOME/.ipython/profile_main/:$HOME/python/modules/:\
 $HOME/python/scripts/:$HOME/python/:$HOME/python/scripts/bashhelpers/:\
 $HOME/python/scripts/bashhelpers/ColorizeOutput/:$HOME/python/Projects/termllama/termllama/:\
@@ -82,6 +84,11 @@ export USE_EMOJI=false # pipx
 # Source dedicated alias file
 [[ -f $HOME/.bash_aliases ]] && . $HOME/.bash_aliases
 [[ -f $HOME/.dotfiles/.bash_aliases ]] && . $HOME/.dotfiles/.bash_aliases
+
+# Source dedicated functions file
+[[ -f $HOME/.bash_functions ]] && . $HOME/.functions
+[[ -f $HOME/.dotfiles/.bash_functions ]] && . $HOME/.dotfiles/.bash_functions
+
 
 # --------------------------------------------------------------- #
 
