--- a/.env
+++ b/.env
@@ -14,18 +14,15 @@ $HOME/python/scripts/bashhelpers/ColorizeOutput/:$HOME/python/Projects/termllama
 $HOME/python/Projects/fsutils/:$HOME/python/Projects/Momentis/:\
 $HOME/python/libs/hwutils/hwutils/:$HOME/python/Projects/hwutils:\
 $HOME/python/Projects/hwutils/hwutils:$HOME/python/scripts/hass:\
-$HOME/python/scripts/bashhelpers/pacman:$HOME/python/Projects/fsutils/scripts:\
-$HOME/python/cython:$HOME/python/Projects/cython_fsutils:$HOME/python/libs/:\
-$HOME/python/Projects/python-modules/progress-bar:\
+$HOME/python/scripts/bashhelpers/pacman:$HOME/python/custom/:\
 $HOME/.local/bin/hyperfine/scripts:$HOME/python/scripts/io:\
-$HOME/python/Projects/python-modules/progress-bar/
+$HOME/python/cython
 
 export PATH=$HOME/.dotfiles/:$HOME/scripts/:$HOME/scripts/graphing/:\
 $HOME/scripts/git_scripts/:$HOME/.local/bin:$HOME/scripts/shutdown:\
 $HOME/scripts/startup:$HOME/scripts/logging/:$HOME/Code/Workspace:\
 $HOME/Android/Sdk/build-tools/35.0.0:$HOME/Android/Sdk/platform-tools:\
-$HOME/python/scripts/io/:/home/joona/.local/bin/:\
-$HOME/scripts/fzf:\
+$HOME/python/scripts/io/:/home/joona/.local/bin/:$HOME/scripts/fzf:\
 $HOME/.local/bin/hyperfine/scripts:$PATH:$PYTHONPATH
 
 # Git
