Various small changes

--- a/.env
+++ b/.env
@@ -65,7 +65,7 @@ export TESSDATA_PREFIX=/usr/share/tessdata
 export DIFFPROG="kitty +kitten diff"
 export MOZ_DISABLE_RDD_SANDBOX=1
 export USER_ZDOTDIR=$ZDOTDIR
-
+export KITTY_PANEL_CFG="/home/joona/.config/kitty/panel.d/bg_padded.conf"
 # Ollama
 # ------
 export OLLAMA_KEEP_ALIVE=30
